--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "mastery",
   "version": "0.0.1",
   "description": "MasteryJS command line utility",
-  "main": "index.js",
   "bin": {
-    "mastery": "index.js"
+    "mastery": "build/index.js"
   },
   "repository": {
     "url": "https://github.com/labibramadhan/mastery-cli.git",
@@ -24,5 +23,36 @@
     "starter",
     "basecode",
     "springboard"
-  ]
+  ],
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "eslint": "^3.12.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "clear": "^0.0.1",
+    "clui": "^0.3.1",
+    "commander": "^2.9.0",
+    "figlet": "^1.2.0",
+    "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "inquirer": "^2.0.0",
+    "lodash": "^4.17.2",
+    "nconf": "^0.8.4",
+    "prompt": "^1.0.0",
+    "simple-git": "^1.65.0"
+  }
 }
