--- a/package.json
+++ b/package.json
@@ -42,13 +42,20 @@
     "eslint-plugin-react": "^6.8.0"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "clear": "^0.0.1",
     "clui": "^0.3.1",
     "commander": "^2.9.0",
+    "del": "^2.2.2",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-copy": "^1.0.0",
+    "gulp-uglify": "^2.0.0",
     "inquirer": "^2.0.0",
     "lodash": "^4.17.2",
     "nconf": "^0.8.4",
