Add 'requireF' method, add 'pkg' global variable

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
   "extends": "airbnb",
   "globals": {
     "conf": true,
+    "pkg": true,
+    "requireF": true,
     "rootPath": true
   },
   "rules": {
