Add debug, reload, start, status, stop commands Improve new and build commands

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,12 +6,15 @@
   "extends": "airbnb",
   "globals": {
     "conf": true,
+    "constants": true,
     "pkg": true,
     "requireF": true,
     "rootPath": true
   },
   "rules": {
     "global-require": 0,
-    "import/no-dynamic-require": 0
+    "import/no-dynamic-require": 0,
+    "import/prefer-default-export": 0,
+    "max-len": ["error", 100, {"ignoreComments": true}]
   }
 }
