--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,12 @@
 {
   "presets": [
-    "es2015",
-    "stage-1"
+    "es2015-node6",
+    "stage-0"
   ],
   "plugins": [
     "add-module-exports",
     "transform-runtime",
     "transform-decorators-legacy",
-    "transform-class-properties",
-    "transform-es2015-classes",
     "transform-flow-strip-types"
   ],
   "sourceMaps": "inline"
