--- a/package.json
+++ b/package.json
@@ -25,16 +25,7 @@
     "springboard"
   ],
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-es2015-classes": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-stage-1": "^6.16.0",
     "eslint": "^3.12.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -42,12 +33,19 @@
     "eslint-plugin-react": "^6.8.0"
   },
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "clear": "^0.0.1",
-    "clui": "^0.3.1",
+    "cli-spinner": "^0.2.5",
     "commander": "^2.9.0",
     "del": "^2.2.2",
     "figlet": "^1.2.0",
@@ -55,10 +53,13 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-copy": "^1.0.0",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "inquirer": "^2.0.0",
     "lodash": "^4.17.2",
+    "loud-rejection": "^1.6.0",
     "nconf": "^0.8.4",
+    "pm2": "^2.2.1",
     "prompt": "^1.0.0",
     "simple-git": "^1.65.0"
   }
