--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "mastery",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "MasteryJS command line utility",
+  "author": "Muhammad Labib Ramadhan",
+  "email": "mlabib.ramadhan@gmail.com",
+  "license": "MIT",
   "bin": {
     "mastery": "build/cli.js"
   },
+  "scripts": {
+    "lint": "eslint src test --fix"
+  },
+  "pre-commit": [
+    "lint"
+  ],
   "repository": {
     "url": "https://github.com/labibramadhan/mastery-cli.git",
     "type": "git"
   },
-  "author": "Muhammad Labib Ramadhan",
-  "email": "mlabib.ramadhan@gmail.com",
-  "license": "MIT",
   "keywords": [
     "hapi",
     "api",
@@ -30,7 +36,8 @@
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "babel": "^6.5.2",
