--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "import/prefer-default-export": 0,
     "max-len": ["error", 100, {
       "ignoreComments": true,
+      "ignoreStrings": true,
       "ignoreTemplateLiterals": true
     }],
     "no-console": 0
