--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mastery": "build/cli.js"
   },
   "scripts": {
-    "lint": "eslint src test --fix"
+    "lint": "eslint src test --fix",
+    "generate-docs": "jsdoc -c jsdoc.json"
   },
   "pre-commit": [
     "lint"
@@ -31,16 +32,19 @@
     "springboard"
   ],
   "devDependencies": {
+    "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "docdash": "^0.4.0",
     "eslint": "^3.12.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "jsdoc": "^3.4.3",
+    "jsdoc-babel": "^0.3.0",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
