--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,9 @@
     "throwError": true
   },
   "rules": {
+    "class-methods-use-this": 0,
     "global-require": 0,
+    "import/no-extraneous-dependencies": 0,
     "import/no-dynamic-require": 0,
     "import/prefer-default-export": 0,
     "max-len": ["error", 100, {
