--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "gulp-jsdoc3": "^1.0.1",
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
     "pre-commit": "^1.2.2"
