Fixed 'buld' command unable to run, update babel recipe

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mastery",
-  "version": "0.1.12",
+  "version": "0.1.14",
   "description": "MasteryJS command line utility",
   "author": "Muhammad Labib Ramadhan",
   "email": "mlabib.ramadhan@gmail.com",
@@ -33,6 +33,14 @@
   ],
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-stage-3": "^6.17.0",
     "docdash": "^0.4.0",
     "eslint": "^3.12.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -45,15 +53,9 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "babel-core": "^6.21.0",
     "babel-cli": "^6.18.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-node6": "^0.4.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-core": "^6.21.0",
+    "babel-preset-babili": "^0.0.9",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "clear": "^0.0.1",
@@ -65,8 +67,6 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-copy": "^1.0.0",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
     "inquirer": "^2.0.0",
     "lodash": "^4.17.2",
     "loud-rejection": "^1.6.0",
