--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,14 @@
 {
   "presets": [
     "es2015-node6",
-    "stage-0"
+    "stage-3"
   ],
   "plugins": [
     "add-module-exports",
     "transform-runtime",
     "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-es2015-classes",
     "transform-flow-strip-types"
   ],
   "sourceMaps": "inline"
