--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
   "presets": [
-    "es2015-node6",
     "stage-3"
   ],
   "plugins": [
@@ -8,6 +7,7 @@
     "transform-runtime",
     "transform-decorators-legacy",
     "transform-class-properties",
+    "transform-es2015-modules-commonjs",
     "transform-flow-strip-types"
   ],
   "sourceMaps": "inline"
