--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "globals": {
     "conf": true,
     "constants": true,
+    "i18n": true,
     "pkg": true,
     "requireF": true,
     "rootPath": true,
