--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mastery",
-  "version": "0.1.19",
+  "version": "0.2.1",
   "description": "MasteryJS command line utility",
   "author": "Muhammad Labib Ramadhan",
   "email": "mlabib.ramadhan@gmail.com",
@@ -36,9 +36,9 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-stage-3": "^6.17.0",
     "docdash": "^0.4.0",
     "eslint": "^3.12.1",
@@ -65,10 +65,12 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-copy": "^1.0.0",
+    "gulp-uglify": "^2.0.0",
     "inquirer": "^2.0.0",
     "lodash": "^4.17.2",
     "loud-rejection": "^1.6.0",
     "nconf": "^0.8.4",
+    "node-polyglot": "^2.2.1",
     "pm2": "^2.2.1",
     "prompt": "^1.0.0",
     "simple-git": "^1.65.0"
