--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mastery",
-  "version": "0.2.2",
+  "version": "1.0.0-alpha1",
   "description": "MasteryJS command line utility",
   "author": "Muhammad Labib Ramadhan",
   "email": "mlabib.ramadhan@gmail.com",
